--- a/java/SampleProviderProject/AndroidManifest.xml
+++ b/java/SampleProviderProject/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <provider android:name=".database.SampleProvider" android:exported="false" android:authorities="com.groupme.providerone.sample"></provider>
+        <activity android:name=".SampleListActivity"></activity>
 
 
     </application>
